closes #61 - adds tests